# neurorosettes-local-viz

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  20220830.pptx  CHANGELOG.md  LICENSE  README.md  Structures.eps  Untitled.ipynb  config.yml  drawings.pptx  grid_tissue.py  growth_adjust.py  main.py  overlap.py  pyproject.toml  requirements.txt  rosette_count.csv  sweep.py  sweep_rates.py  tissue.py  tissue_grid.py
config/: config.yml
docs/: Makefile  additional_utilities.md  conf.py  contact_inhibition.md  cycle.md  example.ipynb  examples.md  grid.md  index.md  make.bat  mechanics.md  requirements.txt  simulation.md  tissue_initialization.md  user_guide.md
examples/: all_meshes.ply  all_meshes.vtk  config.yml  cylinder_meshes.ply  cylinder_meshes.vtk  ideal_case_adh_smal_0_cells.ply  ideal_case_adh_smal_0_neurites.ply  ideal_case_adh_smal_1_cells.ply  ideal_case_adh_smal_1_neurites.ply  ideal_case_adh_smal_2_cells.ply  ideal_case_adh_smal_2_neurites.ply  ideal_case_adh_start_1_cells.ply  ideal_case_fast_adh_0_cells.ply  ideal_case_fast_adh_0_neurites.ply  ideal_case_fast_adh_1_cells.ply  ideal_case_fast_adh_1_neurites.ply  ideal_case_fast_adh_2_cells.ply  ideal_case_fast_adh_2_neurites.ply  ideal_case_fast_rep_0_cells.ply  ideal_case_fast_rep_0_neurites.ply  ideal_case_fast_rep_1_cells.ply  ideal_case_fast_rep_1_neurites.ply  ideal_case_fast_rep_2_cells.ply  ideal_case_fast_rep_2_neurites.ply  ideal_case_fast_smal_0_cells.ply  ideal_case_fast_smal_0_neurites.ply  ideal_case_fast_smal_1_cells.ply  ideal_case_fast_smal_1_neurites.ply  ideal_case_fast_smal_2_cells.ply  ideal_case_fast_smal_2_neurites.ply  (+20 more)
(+236 files in other folders)
