[tool.poetry]
name = "neurorosettes"
version = "0.1.0"
description = "A computational modelling framework designed to simulate the formation of rosette patterns in tissues of the nervous system."
authors = ["Inês G Gonçalves, Jose Manuel García-Aznar"]

[tool.poetry.dependencies]
python = "^3.7"
vedo = "^2022.0.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
myst-nb = "^0.13.2"
sphinx-autoapi = "^1.8.4"
sphinx-autodoc-typehints = "^1.17.0"
pydata-sphinx-theme = "^0.8.0"
ipyvtklink = "^0.2.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
